docs/version-1.13/modules/en/pages/important-notes.adoc
= Important Notes
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-09-23
:page-revdate: {revdate}
:current-version: {page-component-version}

This page summarizes the key notes for {longhorn-product-name} v{patch-version}.

For full release notes, see the {longhorn-product-name} v{patch-version} release notes.

== Breaking Changes

[#_deprecation_of_legacy_v2_linked_clone_volumes]
=== Deprecation of legacy v2 linked clone volumes

V2 linked-clone volumes created in v1.12.0 or earlier are marked as legacy and deprecated starting in v1.12.1. The new linked-clone architecture introduced in https://github.com/longhorn/longhorn/issues/12552[#12552] is not compatible with the legacy design.

After upgrading to v1.12.1, *legacy linked-clone volumes cannot be operated on except for detachment and deletion*.

To replace, create new linked-clone volumes from the same source volumes that back the legacy ones. If a legacy volume exists, its source volume is guaranteed to still be present, so you can create a replacement linked clone directly - no data copy is required.

For more information, see https://github.com/longhorn/longhorn/issues/12552[#12552].

[#_removal_of_v2_backing_images]
=== Removal of V2 Backing Images

V2 Backing Images are removed in {longhorn-product-name} v1.12.0. Use the Containerized Data Importer (CDI) to import images into {longhorn-product-name} for compatibility with the current engine.

=== Migration required for existing V2 volumes with backing images

[WARNING]
====
* V2 volumes with backing image dependencies cannot be upgraded in-place. Attempting to upgrade without migration may result in volume attachment failures.
* Furthermore, a direct backup of a V2 volume does not include its V2 backing image data, meaning a restore would still require the original backing image. If the volume data is still needed, you *must* perform the migration below before upgrading. If the data is no longer needed, simply delete the V2 volume instead.
====

Before upgrading to v1.13.0, flatten each required V2 volume into a temporary V1 volume and back up the V1 volume:

. *Stop writes to the source volume*: Detach the workload or otherwise ensure that no process can modify the V2 volume during the copy.
. *Create a temporary V1 volume*: Do not configure a backing image, and make the volume exactly the same size as the source V2 volume.
. *Copy every block*: Use an offline migration pod or maintenance environment that exposes both volumes as raw block devices on the same node. Copy the source device to the temporary V1 device, then verify the result.
+
[shell]
----
dd if=/dev/source of=/dev/target bs=4M conv=fsync
cmp /dev/source /dev/target
sha256sum /dev/source /dev/target
----
+
. *Back up the temporary V1 volume*: Detach the migration pod and create a Longhorn backup of the temporary V1 volume in the configured backup target.
. *Test the standalone backup*: Verify that the backup does not list a backing image, restore it to a new volume, and validate the restored data before deleting any source data.
. *Remove the dependency*: After the test restore succeeds, delete the original V2 volume and backing image. The temporary V1 volume can also be deleted after confirming that its backup is available.

For more information, see https://github.com/longhorn/longhorn/issues/13181[#13181] and xref:volumes/containerized-data-importer.adoc[{longhorn-product-name} with CDI Imports].

== V2 Data Engine

=== General Availability

The V2 Data Engine is generally available in {longhorn-product-name} v1.12.0. This milestone reflects improvements in stability, operational safety, networking support, and feature maturity, making V2 volumes suitable for production use in supported environments.

For a summary of the current V1 and V2 behavior differences and feature parity, see xref:v1-v2-volume-behavior-and-feature-parity.adoc[V1 and V2 Volume Behavior and Feature Parity].

For more information, see https://github.com/longhorn/longhorn/issues/6229[#6229].

=== Important Note

==== Volume Attach Latency at Scale

In environments with a growing number of attached V2 volumes, increased attach latency has been observed for subsequent volumes. Initial analysis suggests this may be related to NVMe-TCP connection handling at scale, though the precise layer (SPDK user-space or Linux kernel) has not yet been identified. Further investigation is in progress. For follow-up status, see https://github.com/longhorn/longhorn/issues/13241[#13241].

==== ARM64 NVMe-backed Block-Type Node Disk Limitation

On ARM64 systems, V2 volumes may experience stuck I/O when SPDK is configured with two or more CPU cores and node disks use the NVMe driver. The root cause may lie in either the Linux kernel or SPDK itself, and further investigation is required. As a workaround, use [AIO-backed node disks](../nodes-and-volumes/nodes/multidisk#using-aio-disks) instead of [NVMe-backed node disks](../nodes-and-volumes/nodes/multidisk#using-nvme-disks) on ARM64 systems. For follow-up status, see https://github.com/longhorn/longhorn/issues/13243[#13243].

==== UBLK Frontend Kernel Limitation

This feature is experimental. The UBLK front-end works on all supported Linux kernels but may cause a kernel panic with kernel v6.17.

For more information, see https://github.com/longhorn/longhorn/issues/11977[#11977] and https://github.com/longhorn/longhorn/issues/13509[#13509].

==== {longhorn-product-name} System Upgrade

Starting with {longhorn-product-name} v1.12.2, attached V2 volumes can use xref:upgrades/longhorn-components/v2-instance-upgrade.adoc[live upgrade] without detaching when the prerequisites are met and *Allow Instance Manager Automatic Upgrade* is enabled for V2. {longhorn-product-name} upgrades instance managers one node at a time by temporarily relocating engines to other nodes.

During a live upgrade, do not expand or live-migrate V2 volumes. Wait until all node upgrades are completed and volumes are healthy before performing these operations.

[#_fast_volume_cloning]
=== Fast Volume Cloning

{longhorn-product-name} v1.12.1 enhances fast volume cloning for the V2 Data Engine. A `linked-clone` volume shares data blocks with its source instead of copying data. With the new architecture, a source replica can share its data blocks with multiple linked-clone volumes, and multiple clone replicas can be created in parallel.

Linked-clone volumes now support most operations available to regular volumes, including snapshots, backups, expansion, replica rebuilding, and use as the source of nested linked clones.

The new architecture is not compatible with clones created in v1.12.0 or earlier. See xref:_deprecation_of_legacy_v2_linked_clone_volumes[Deprecation of legacy v2 linked clone volumes].

For more information, see https://github.com/longhorn/longhorn/issues/12552[#12552] and xref:volumes/clone-volumes.adoc[CSI Volume Clone].

=== Default CPU Allocation

{longhorn-product-name} v1.12.0 changes the default `data-engine-cpu-mask` from `0x1` (1 CPU core) to `0x3` (2 CPU cores). V2 Data Engine uses a busy-polling reactor model where the master reactor handles both I/O polling and management RPCs. When only a single core is assigned, heavy I/O workloads can delay or starve RPC processing, resulting in increased latency, timeout events, and operational instability.

Assigning 2 or more cores allows I/O and management tasks to run on separate reactors, improving responsiveness and operational stability.

For more information, see https://github.com/longhorn/longhorn/issues/13237[#13237] and xref:v2-data-engine/configurable-cpu-cores.adoc[Configurable CPU Cores].

=== V2 Dedicated CPU Requirements

When assigning CPU cores to the V2 Data Engine, ensure that the V2 instance-manager pod has enough guaranteed CPU resources to cover the assigned cores. This provides dedicated CPU availability for SPDK reactors, prevents CPU contention, and helps maintain predictable performance and V2 Data Engine stability.

You can verify that the guaranteed CPU resources match the CPU cores specified by `data-engine-cpu-mask` or `data-engine-number-of-cpu-cores`. For more details, see xref:longhorn-system/settings.adoc#_guaranteed_instance_manager_cpu[Guaranteed Instance Manager CPU], xref:longhorn-system/settings.adoc#_data_engine_number_of_cpu_cores[Data Engine CPU Mask].

[#_cpu_allocation_with_the_kubernetes_cpu_manager]
=== CPU Core Allocation with the Kubernetes CPU Manager

{longhorn-product-name} v1.12.1 can allocate exclusive CPU cores to the SPDK target daemon, which runs in each V2 Instance Manager pod, through the Kubernetes CPU Manager by using the `data-engine-number-of-cpu-cores` setting.

The setting can be applied only when the kubelet CPU Manager policy is set to `static` on all worker nodes otherwise, the update is rejected. When the value is positive, it takes precedence, and `data-engine-cpu-mask` is ignored.

For more information, see https://github.com/longhorn/longhorn/issues/13248[#13248].

=== Host CPU Isolation

The `data-engine-cpu-isolation-enabled` setting now also configures host network Receive Packet Steering (RPS) to steer RX softirq processing away from the CPU cores used by the SPDK target daemon, in addition to hardware IRQs and unbound kernel workqueue workers. Without this, the kernel can distribute incoming network packets to the SPDK reactor cores, and the resulting softirq work competes with the reactor's busy-poll loop, degrading volume I/O under network load.

For more information, see https://github.com/longhorn/longhorn/issues/13483[#13483] and https://github.com/longhorn/longhorn/issues/13502[#13502].

[#_spdk_iobuf_pool_size_configuration]
=== SPDK iobuf Pool Size Configuration

{longhorn-product-name} v1.12.1 allows tuning the SPDK iobuf buffer pools used by the V2 Data Engine. The `data-engine-iobuf-large-pool-size` and `data-engine-iobuf-small-pool-size` settings configure the large and 8 KiB small buffer pools, respectively. Increasing the small pool can relieve buffer exhaustion under high-queue-depth workloads with small I/O sizes. Because iobuf pools can only be sized at SPDK target startup, changing either setting recreates V2 Instance Manager pods that have no running instances.

For more information, see https://github.com/longhorn/longhorn/issues/13322[#13322] and https://github.com/longhorn/longhorn/issues/13674[#13674].

=== V2 Dedicated CPU Requirements

When assigning CPU cores to the V2 Data Engine, ensure that the V2 instance-manager pod has enough guaranteed CPU resources to cover the assigned cores. This provides dedicated CPU availability for SPDK reactors, prevents CPU contention, and helps maintain predictable performance and V2 Data Engine stability.

You can verify that the guaranteed CPU resources match the CPU cores specified by `data-engine-cpu-mask` or `data-engine-number-of-cpu-cores`. For more details, see xref:longhorn-system/settings.adoc#_guranteed_instance_manager_cpu[Guaranteed Instance Manager CPU], xref:longhorn-system/settings.adoc#_data_engine_cpu_mask[Data Engine CPU Mask], and xref:longhorn-system/settings.adoc#_data_engine_number_of_cpu_cores[Data Engine Number of CPU Cores].

=== CPU Isolation Enabled by Default

{longhorn-product-name} v{patch-version} enables xref:longhorn-system/settings.adoc#_data_engine_cpu_isolation_enabled[Data Engine CPU Isolation] by default for the V2 Data Engine (`{"v2":"true"}`). This ensures that CPU cores are dedicated to the V2 Data Engine.

For more information, see https://github.com/longhorn/longhorn/issues/13724[#13724] and xref:longhorn-system/settings.adoc#_data_engine_cpu_isolation_enabled[Data Engine CPU Isolation Enabled].

=== IPv6 Support

V2 volumes now support single-stack IPv6 Kubernetes clusters. For dual-stack cluster support and its limitations, see xref:_dualstack_cluster_support[Dual-Stack Cluster Support].

For more information, see https://github.com/longhorn/longhorn/issues/10928[#10928].

== Storage Sharding (Experimental)

{longhorn-product-name} v1.12.1 introduces storage sharding as an experimental data protection and storage layout feature built on the V2 Data Engine. Instead of storing a full copy of the volume on each replica, sharding uses erasure coding to encode written data into data and parity chunks, which are distributed across multiple nodes. This allows a volume to grow beyond the capacity of a single disk or node while using less disk space to achieve the same level of fault tolerance.

Because this feature is experimental, it is intended for evaluation and testing only and is not recommended for production use.

For more information, see https://github.com/longhorn/longhorn/issues/1061[#1061] and xref:v2-data-engine/sharding.adoc[Sharding with Erasure Coding].

== Important Fixes

This release includes critical stability fixes.

=== Instance Manager Panic During Replica Rebuild

{longhorn-product-name} v1.12.0 fixes an instance-manager panic that could occur during replica rebuild storms. In affected environments, the panic could terminate all iSCSI targets served by the instance-manager and trigger cascading volume detachments across multiple PVCs.

For more information, see https://github.com/longhorn/longhorn/issues/13087[#13087].

=== Replica Rebuild Progress Reporting

{longhorn-product-name} v1.12.0 fixes a replica rebuild progress reporting bug that could display values greater than 100% after file-sync retries on unstable networks. Progress accounting is now reset correctly for retried files, so rebuild progress remains within the valid 0% to 100% range.

For more information, see https://github.com/longhorn/longhorn/issues/12949[#12949].

=== Replica Auto-Balance Scheduling Loop

{longhorn-product-name} v1.12.0 fixes a regression in replica auto-balance that could trigger a repeated replica create-and-delete loop when `Replica Auto Balance` was set to `best-effort`. In affected clusters, {longhorn-product-name} could keep scheduling an extra replica instead of stabilizing at the configured replica count.

For more information, see https://github.com/longhorn/longhorn/issues/12926[#12926].

=== Replica CR Leak During Failed Local Scheduling

{longhorn-product-name} v1.12.0 fixes a replica scheduling issue where large numbers of stopped Replica CRs could accumulate when `dataLocality` was set to `best-effort` and the node did not have enough eligible local disk space for another replica. In affected clusters, recurring reconciliation could keep creating placeholder Replica CRs instead of reusing a single failed-schedule placeholder.

For more information, see https://github.com/longhorn/longhorn/issues/13152[#13152].

=== CSI Storage Capacity Tracking

{longhorn-product-name} v1.12.0 fixes a CSIStorageCapacity scheduling issue that could cause compute nodes without Longhorn disks to report zero capacity and be rejected by `WaitForFirstConsumer` scheduling. In affected clusters with separated compute and storage nodes, new PVCs could remain pending even though eligible storage was available on storage nodes.

For more information, see https://github.com/longhorn/longhorn/issues/12807[#12807] and xref:longhorn-system/settings.adoc#_csi_storage_capacity_tracking[Settings].

=== Encrypted Volume Size Correction

{longhorn-product-name} reserves an additional 16 MiB of raw capacity for the LUKS2 metadata used by encrypted volumes, allowing the mapped device to expose the full capacity requested by the workload. Previously, the metadata was taken from usable capacity, so a requested 1 GiB encrypted volume exposed only 1008 MiB. This discrepancy could cause operations such as block-level copies between equally sized unencrypted and encrypted volumes to fail.

* *V1 Data Engine*: This correction was introduced in {longhorn-product-name} v1.12.0. Existing encrypted V1 volumes created with v1.11.x or earlier receive the additional capacity automatically when their engine image is upgraded to v1.12 or later. Existing data is preserved. Encrypted migratable V1 volumes cannot be live-migrated while using an engine image with a CLI API version earlier than 12. Upgrade the engine image first.
* *V2 Data Engine*: {longhorn-product-name} v1.12.0 applies the correction to newly created encrypted V2 volumes.

[NOTE]
====
Existing encrypted V2 volumes upgraded from v1.11.3 or v1.12.0 do not receive the additional 16 MiB of raw capacity and continue to expose 16 MiB less than requested. Existing data is preserved.
====

For more information, see https://github.com/longhorn/longhorn/issues/9205[#9205] and https://github.com/longhorn/longhorn/issues/13163[#13163].

== General

=== Kubernetes Version Requirement

Because the CSI external snapshotter is upgraded to v8.2.0, all clusters must be running Kubernetes v1.25 or later before upgrading to {longhorn-product-name} v1.12.1.

=== Manual Checks Before Upgrade

Automated pre-upgrade checks do not cover all scenarios. Manual checks via kubectl or the UI are recommended:

* For V2 Data Engine volumes, check the xref:upgrades/longhorn-components/v2-instance-upgrade.adoc#_prerequisites[V2 live upgrade prerequisites]. If your deployment does not meet these prerequisites, detach all V2 volumes and ensure their replicas are stopped before upgrading.
* Avoid upgrading when volumes are in the "Faulted" state, as unusable replicas may be deleted, causing permanent data loss if no backups exist.
* Avoid upgrading if a failed BackingImage exists. See xref:snapshots-backups/backing-image-backups.adoc[Backing Image].
* Creating a xref:snapshots-backups/system-backups/create-system-backup.adoc[Longhorn system backup] before upgrading is recommended to ensure recoverability.

== Scheduling

=== Volume Topology Constraint

{longhorn-product-name} v{patch-version} adds the `volumeTopology` StorageClass parameter to keep a volume's replicas in the zone or region where it was provisioned. Previously, zone labels only spread replicas apart, so a rebuild could place a replica in a different zone from the workload.

* `any` (default): no constraint.
* `zonal`: replicas stay in the zone chosen at provisioning time, including during rebuilds and replica count changes. With `WaitForFirstConsumer`, this is the zone the pod is scheduled to. With `Immediate` binding, the zone is selected from the provisioner-supplied topology at creation time, and the first consumer pod is constrained to that zone through the PV `nodeAffinity`.
* `regional`: same as `zonal`, but for regions.

If the chosen zone or region has no capacity, scheduling waits rather than falling back to another one. Clusters without topology labels are unaffected. A StorageClass with `volumeTopology: zonal` and `replicaZoneSoftAntiAffinity: disabled` is rejected at provisioning time.

For more information, see https://github.com/longhorn/longhorn/issues/13493[#13493] and xref:nodes/topology-aware-provisioning.adoc[Topology-Aware Provisioning].

=== Scheduler Extender

{longhorn-product-name} v{patch-version} adds a scheduler extender that lets kube-scheduler check actual Longhorn disk capacity when placing pods. Without it, kube-scheduler relies on `CSIStorageCapacity` objects, which have three limitations:

* The reported capacity lags behind when many pods are created at once.
* A pod with several PVCs is not checked against the combined space it needs across disks.
* A pod whose PVCs are already bound is rescheduled without any capacity check.

The extender reads Longhorn node and disk state directly. It also pins a restarted pod to the node that already holds all of its replicas, which makes it most useful for volumes with `best-effort` data locality.

The extender runs inside longhorn-manager under leader election, so there is no extra component to deploy. It requires a change to the kube-scheduler configuration, which is not possible on managed Kubernetes offerings such as GKE and EKS.

For more information, see https://github.com/longhorn/longhorn/issues/12591[#12591].

== Resource Efficiency

=== Longhorn Manager Memory Optimization

{longhorn-product-name} v1.12.0 optimizes longhorn-manager informer caching to reduce memory usage, especially in large clusters with high pod counts. This lowers cluster-wide memory overhead caused by repeated caching of non-Longhorn pod data on every manager instance.

For more information, see https://github.com/longhorn/longhorn/issues/12771[#12771].

== Networking

[#_internal_network_policies]
=== Internal Network Policies

{longhorn-product-name} v1.12.1 enables ingress `NetworkPolicy` resources for internal component endpoints and RPCs by default, including the instance-manager gRPC endpoint used for engine control. These policies are enforced only when the cluster has a network plugin that supports and enforces Kubernetes `NetworkPolicy`. Without such a provider, the resources are created but do not affect traffic and do not need to be removed.

{longhorn-product-name} v{patch-version} resolves these CNI compatibility issues by providing two new Helm values to manage the affected traffic paths:

* *`networkPolicies.v1DataEngineInitiatorSourceCIDRs`*: Controls source filtering for V1 iSCSI on TCP port 3260. An empty list leaves this port without source filtering, allowing any source that can reach instance-manager to connect to TCP/3260. If populated, the CIDRs restrict connections to the effective sources observed by the CNI, so the required values are CNI-specific.
* *`networkPolicies.recoveryBackendAdditionalIngressPorts`*: Adds TCP ingress ports to the recovery backend (defaults to an empty list). Add `15008` when using Istio Ambient, which uses HTTP-Based Overlay Network Environment (HBONE) on this port. This should only be configured for applicable mesh transports.

The xref:installation-setup/best-practices.adoc#_cni_plugin_compatibility[CNI Plugin Compatibility] table lists the Kubernetes distribution and CNI combinations that the {longhorn-product-name} project has validated with `networkPolicies.restrictInternalTraffic` enabled. If your CNI enforces `NetworkPolicy` but your distribution and CNI combination is not listed, test the policies in your target environment before upgrading. For policy behavior and configuration details, see xref:longhorn-system/networking/network-policy.adoc[Network Policies].

[NOTE]
====
ServiceMonitor discovery does not automatically authorize network traffic. Cross-namespace Prometheus scrapers might be blocked by the Longhorn Manager's network policy. To allow this traffic, apply a scoped additive policy as detailed in the xref:observability/configure-prometheus-grafana.adoc[Prometheus and Grafana setup] guide.
====

For Helm installations, `networkPolicies.restrictInternalTraffic` controls the internal policies and defaults to `true`. Leave this setting enabled unless the policies block traffic required by your environment or you manage the policies separately. To disable the policies, set `networkPolicies.restrictInternalTraffic=false` in the values file or pass `--set networkPolicies.restrictInternalTraffic=false` when running or retrying `helm upgrade`. Use `--reuse-values` with `helm upgrade` when appropriate to retain previous release settings. This setting is independent of `networkPolicies.enabled`, which controls only the {longhorn-product-name} UI front-end policy.

After a successful upgrade with `networkPolicies.restrictInternalTraffic=false`, the six internal `NetworkPolicy` templates are omitted from the rendered output, and policies owned by the Helm release are removed. Preview the rendered output with `helm upgrade --dry-run` or `helm template`. Do not add `--reuse-values` to `helm template`. If installed, `helm diff` can optionally compare the changes.

For manifest installations, no action is required if the policies are not enforced or do not block required traffic. If the internal policies must be disabled, delete only these six `NetworkPolicy` resources:

* `backing-image-data-source`
* `backing-image-manager`
* `instance-manager`
* `longhorn-manager`
* `longhorn-recovery-backend`
* `longhorn-webhook`

These resources are defined in `longhorn.yaml` and `longhorn-okd.yaml`. Do not use `kubectl delete -f` on an entire {longhorn-product-name} manifest or delete the {longhorn-product-name} installation. Applying either unmodified manifest later recreates the policies.

If an upgrade fails because these policies block required traffic, disable or remove the internal policies as appropriate and retry the same upgrade.

For more information, see https://github.com/longhorn/longhorn/issues/13438[#13438].

[#_instance_manager_grpc_mtls_coverage]
=== Instance Manager gRPC mTLS Coverage

When the `longhorn-grpc-tls` secret is configured, the remaining instance-manager gRPC services now also require mutual TLS. Plaintext clients and clients without a valid certificate are rejected.

For more information, see https://github.com/longhorn/longhorn/issues/7787[#7787] and xref:longhorn-system/mtls-support.adoc[MTLS Support].

[#_dualstack_cluster_support]
=== Dual-Stack Cluster Support

{longhorn-product-name} supports dual-stack Kubernetes clusters under a specific requirement: all nodes must be configured with their IP families in the same order (either all IPv4-first, or all IPv6-first). When the order is consistent, {longhorn-product-name} uses the first IP family of each node and operates correctly. This applies to both the V1 and V2 Data Engines.

[WARNING]
====
Dual-stack clusters with mixed IP family ordering across nodes are not supported and may result in connectivity failures between replicas and the engine.
====

For more information, see https://github.com/longhorn/longhorn/issues/11531[#11531].

== Monitoring

=== Toggle Kubernetes Metrics Server Integration

{longhorn-product-name} v1.12.0 adds the `Kubernetes Metrics Server Metrics Enabled` setting to disable metrics-server-dependent metrics when the Kubernetes Metrics Server API is unavailable. This reduces repeated scrape warnings and unnecessary API calls while preserving other {longhorn-product-name} metrics.

For more information, see https://github.com/longhorn/longhorn/issues/13011[#13011] and xref:longhorn-system/settings.adoc#_kubernetes_metrics_server_metrics_enabled[Settings].

== Command-Line Tool

=== On-Demand Snapshot Checksum Calculation

{longhorn-product-name} v1.12.0 adds `longhornctl` support for triggering on-demand snapshot checksum calculation. This is useful when snapshot checksum recalculation needs to be requested without waiting for the periodic integrity-check schedule.

The command can target a specific volume, all volumes on a specific node, or all volumes in the cluster. The checksum operation runs asynchronously in the background.

For more information, see https://github.com/longhorn/longhorn/issues/11442[#11442] and xref:data-integrity-recovery/on-demand-snapshot-data-integrity.adoc[On-Demand Snapshot Checksum Calculation].
